tests/neg-macros/i9014.check

-- Error: tests/neg-macros/i9014/Test_2.scala:1:23 ---------------------------------------------------------------------
1 |val tests = summon[Bar] // error
  |                       ^
  |                       Failed to expand!
  | This location contains code that was inlined from Test_2.scala:1
